--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App{
   color: aliceblue;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   background-color: rgb(11, 11, 94);
@@ -54,7 +54,7 @@ section{
   flex-direction: column;
   align-content: center;
   flex-wrap: wrap;
-  min-height: 380px;
+  min-height: 457px;
 }
 
 article{
@@ -95,6 +95,19 @@ h1{
   min-width: 180px;
 }
 
+#btnSearchs{
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  background-color: #4aa2f04d;
+  border: none;
+  color: white;
+  font-weight: 700;
+  cursor: pointer;
+  align-self: flex-end;
+  font-size: 10px;
+  
+}
 
 #currentLocBtn{
   cursor: pointer;
@@ -104,4 +117,24 @@ h1{
   color: grey;
   background-color: #d0d0e7;
   font-weight: 600;
+}
+
+
+.divTotalCities{
+  width: 90%;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: space-evenly;
+  align-items: center;
+  border-bottom: 0.25px solid white;
+}
+
+#sectionAllCities{
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: center;
+  max-height: 457px;
+  overflow-y: auto;
 }
