--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   min-height: 100vh;
   display: flex;
   justify-content: center;
-  background-color: rgb(11, 11, 94);
+  background: linear-gradient(204deg, rgb(11, 11, 94), rgb(104 106 255));
 }
 
 main{
@@ -29,7 +29,7 @@ form>div>button>img{
 }
 
 form>div>button{
-  background-color: rgb(11, 11, 94);
+  background: none;
   border: none;
   cursor: pointer;
 }
@@ -44,7 +44,7 @@ form>div>input{
   text-align: center;
   background-color: #4aa2f04d;
   color: white;
-  border: 0.5px solid rgb(11, 11, 94);
+  border: none;
 }
 
 section{
@@ -102,7 +102,6 @@ h1{
   background-color: #4aa2f04d;
   border: none;
   color: white;
-  font-weight: 700;
   cursor: pointer;
   align-self: flex-end;
   font-size: 10px;
@@ -138,4 +137,12 @@ h1{
   justify-content: center;
   max-height: 457px;
   overflow-y: auto;
+}
+
+#divSpinner{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  min-height: 457px;
 }
